# MRM_Dhruv

./: Task_1.md  Task_3.md  Task_4_5.md
C++/: Module1  Module1.md
C++_Task/: Module1.cpp  Module2.cpp  Module3.cpp  Module4.cpp
C++_Task/Course_2/: AIA_TP_QUIZZ.cpp  Module1.cpp  Module2.cpp  Module3.cpp  Module4.cpp
cashier_system_ws/install/: local_setup.sh  setup.sh
cashier_system_ws/install/cashier_system/include/cashier_system/cashier_system/msg/detail/: bill__builder.hpp  bill__struct.h  bill__type_support.c
cashier_system_ws/install/cashier_system/lib/cashier_system/: bill_publisher  inventory_manager  last_bill_printer
cashier_system_ws/install/cashier_system/local/lib/python3.10/dist-packages/cashier_system/msg/: _bill.py
cashier_system_ws/install/cashier_system/share/cashier_system/: package.dsv  package.ps1  package.sh
cashier_system_ws/install/cashier_system/share/cashier_system/cmake/: cashier_systemConfig.cmake
cashier_system_ws/install/cashier_system/share/cashier_system/msg/: Bill.idl
cashier_system_ws/src/cashier_system/: CMakeLists.txt
cashier_system_ws/src/cashier_system/src/: bill_publisher.cpp  inventory_manager.cpp  last_bill_printer.cpp
rover_project/: README.md
rover_project/install/: local_setup.sh  setup.sh
rover_project/install/mobile_robot/lib/mobile_robot/: coordinate_input_node  gps_subscriber  rover_control_node
rover_project/install/mobile_robot/share/mobile_robot/: local_setup.sh  package.sh  package.xml
rover_project/install/mobile_robot/share/mobile_robot/launch/: coordinate_input_launch.py
rover_project/install/mobile_robot/share/mobile_robot/model/: rover.xacro
rover_project/src/mobile_robot/: CMakeLists.txt
rover_project/src/mobile_robot/launch/: coordinate_input_launch.py  gazebo_launch.py
rover_project/src/mobile_robot/model/: world.world
rover_project/src/mobile_robot/src/: coordinate_input_node.cpp  gps_subscriber.cpp  rover_control_node.cpp
rover_project_ATT_OA/src/mobile_robot/: CMakeLists.txt  package.xml
rover_project_ATT_OA/src/mobile_robot/launch/: coordinate_input_launch.py  gazebo_launch.py  rviz_launch.py
rover_project_ATT_OA/src/mobile_robot/model/: rover.xacro  world.world
rover_project_ATT_OA/src/mobile_robot/rviz/: rover.rviz  rover_config.rviz
rover_project_ATT_OA/src/mobile_robot/src/: coordinate_input_node.cpp  gps_subscriber.cpp  obstacle_avoidance.cpp  rover_control_node.cpp
