<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot</name>
  <version>0.0.1</version>
  <description>Autonomous six-wheeled rover simulation and control package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>

  <!-- TF and transformation dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Geospatial calculations -->
  <depend>GeographicLib</depend>

  <!-- Simulation dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_dev</depend>

  <!-- Robot model and control -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>

  <!-- Visualization and UI -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>launch_ros</depend>

  <!-- Additional utilities -->
  <depend>ament_index_python</depend>
  <depend>teleop_twist_keyboard</depend>

  <!-- Testing and linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/share/${PROJECT_NAME}"/>
    <gazebo_ros plugin_path="${prefix}/lib/${PROJECT_NAME}"/>
  </export>
</package>